
add_executable(pair-example pair-example.cpp)

add_executable(pair-example1 pair-example1.cpp)

add_executable(tuple-example tuple-example.cpp)

add_executable(tuple-example3 tuple-example-3.cpp)

add_executable(tuple-example4 tuple-example-4.cpp)

add_executable(vector-example1 vector-example-1.cpp)

add_executable(lambda-example1 lambda-example-1.cpp)

add_executable(lambda-example2 lambda-example-2.cpp)

add_executable(lambda-example3 lambda-example-3.cpp)

add_executable(lambda-example4 lambda-example-4.cpp)

add_executable(citizens-example citizens-example.cpp)

add_executable(transform-example transform-example.cpp)

add_executable(foreach-example foreach-example.cpp)

add_executable(filter-example filter-example.cpp)
